--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ITRocket Explorer - Cosmos Blockchain Explorer And Web Wallet</title>
+    <title>Jotzumi Explorer - Cosmos Blockchain Explorer And Web Wallet</title>
     <meta property="og:title" content="Jotzumi Explorer" />
     <meta property="og:image" content="/explorer_preview.png" />
     <meta property="twitter:title" content="Jotzumi Explorer" />
